--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,11 @@ dependencies:
   http: ^0.12.2
   youtube_player_flutter: ^7.0.0+7
   flutter_webview_plugin: ^0.3.11
+  google_sign_in: ^4.5.3
+  firebase_auth: ^0.18.0+1
+  shared_preferences: ^0.5.10
+  firebase_core: ^0.5.0
+  flutter_facebook_login: ^3.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -47,8 +52,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-#  assets:
-#    - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
 #    - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
