--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,18 +23,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.12.2
-  youtube_player_flutter: ^7.0.0+7
+  cupertino_icons: ^0.1.3
+  firebase_auth: ^0.18.0+1
+  firebase_core: ^0.5.0
+  flutter_cached_pdfview: null
+  flutter_facebook_login: ^3.0.0
   flutter_webview_plugin: ^0.3.11
   google_sign_in: ^4.5.3
-  firebase_auth: ^0.18.0+1
+  http: ^0.12.2
   shared_preferences: ^0.5.10
-  firebase_core: ^0.5.0
-  flutter_facebook_login: ^3.0.0
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
+  video_player: ^0.10.2+1
+  youtube_player_flutter: null
 
 dev_dependencies:
   flutter_test:
@@ -42,7 +41,6 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter.
 flutter:
 
@@ -54,14 +52,11 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-#    - images/a_dot_ham.jpeg
-
+  #    - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
@@ -82,6 +77,5 @@ flutter:
         - asset: assets/fonts/Roboto-Light.ttf
         - asset: assets/fonts/Roboto-Bold.ttf
           weight: 700
-  #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
